<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/zero"
    android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/margin10"
        android:text="Playlist Maker"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/size26"
        android:fontFamily="@font/ys_display_medium"/>

    <Button
        android:id="@+id/lupa1"
        style="@style/main_button_style"
        android:text="@string/poisk"
        app:icon="@drawable/lupa1" />

    <Button
        android:id="@+id/music"
        style="@style/main_button_style"
        android:text="@string/media"
        app:icon="@drawable/music" />

    <Button
        android:id="@+id/settings"
        style="@style/main_button_style"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>

