<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/button_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="28dp">

        <Button
            android:id="@+id/light_mode"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@null"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:icon="@drawable/light_mode"
            app:iconTint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="@dimen/button_margin"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/size26"
            tools:ignore="InefficientWeight,RtlHardcoded" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darkmode"
            android:layout_marginStart="@dimen/button_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/size16"  />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zero"
            android:layout_gravity="end"
            android:backgroundTint="@color/black"
            android:minWidth="@dimen/button_width"
            tools:ignore="TouchTargetSizeCheck" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/share"
            android:textSize="@dimen/size16"
            android:textColor="@color/black"
            tools:ignore="InefficientWeight" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/zero"
            app:icon="@drawable/vector"
            app:iconPadding="@dimen/padding8"
            app:iconTint="@color/grey"
            android:layout_gravity="end"
            tools:ignore="SpeakableTextPresentCheck"
            android:outlineProvider="none"
            app:elevation="@dimen/zero"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/size16"
            tools:ignore="InefficientWeight" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:elevation="@dimen/zero"
            app:icon="@drawable/support"
            app:iconPadding="@dimen/zero"
            app:iconTint="@color/grey"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/documentation"
            android:textColor="@color/black"
            android:textSize="@dimen/size16" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:elevation="@dimen/zero"
            app:icon="@drawable/arrow_forward"
            app:iconPadding="@dimen/zero"
            app:iconTint="@color/grey"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</LinearLayout>
