<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button

            android:id="@+id/light_mode"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@null"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:outlineProvider="none"
            app:icon="@drawable/light_mode"
            app:iconTint="?attr/colorOnPrimary"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="@dimen/button_margin"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/size26"
            tools:ignore="InefficientWeight,RtlHardcoded" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <EditText
            android:maxLines="1"
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:layout_marginVertical="@dimen/padding8"
            android:background="@drawable/cancel_icon"
            android:drawableStart="@drawable/lupa1"
            android:drawablePadding="12dp"
            android:drawableTint="?attr/editTextColor"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLength="15"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:textColorHint="?attr/editTextColor"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

        </EditText>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingEnd="24dp"
            android:contentDescription="@string/clear_icon"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="invisible"
            app:tint="?attr/editTextColor"/>
    </FrameLayout>


</LinearLayout>